Deleted target folder

--- a/Online_Shopping/pom.xml
+++ b/Online_Shopping/pom.xml
@@ -5,8 +5,11 @@
 	<artifactId>shopping</artifactId>
 	<version>apis</version>
 	<packaging>war</packaging>
-	<dependencies>
-
+	
+	<properties>
+		<resteasy.version>2.3.6.Final</resteasy.version>
+	</properties>
+	<dependencies>	
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -15,22 +18,22 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>2.3.6.Final</version>
+			<version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxb-provider</artifactId>
-			<version>2.3.6.Final</version>
+			<version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jettison-provider</artifactId>
-			<version>2.3.6.Final</version>
+			<version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
-			<version>2.3.6.Final</version>
+			<version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
